--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,7 +1,10 @@
 <h1>Stupid Coaching</h1>
+<br>
 
+<p>Ask your coach anything :</p>
+<br>
 
 <form action="/answer" method="get">
-  <input type="text" name="question">
+  <input type="text" name="question" placeholder="Type something..">
   <input type="submit" value="Ask!">
 </form>
